# nucs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md
.github/workflows/: ci.yml  release-notes.yaml
benches/: rand.rs  translation.rs
src/: amino.rs  casts.rs  error.rs  iter.rs  lib.rs  nuc.rs  proptest.rs  rand.rs  seq.rs  slice.rs  symbol.rs  translation.rs
