[package]
name = "nucs"
version = "0.1.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swooster/nucs"
readme = "README.md"
description = "Library for working with nucleotide and amino acid sequences"
keywords = ["nucleotide", "amino-acid", "dna", "peptide"]
categories = ["science::bioinformatics::genomics"]
authors = [
    "Steve Wooster <s.f.m.wooster+nucs@gmail.com>",
]
rust-version = "1.89"
edition = "2024"

[features]
default = []
all = ["proptest", "rand", "serde", "unsafe"]

unsafe = []

[dependencies]
proptest = { version = "1.7.0", features = ["std"], optional = true }
rand = { version = "0.9.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.7"
proptest = { version = "1.7.0", features = ["std"] }
rand = "0.9.0" # activate more features for bench
serde_json = "1.0"

[[bench]]
name = "rand"
harness = false
required-features = ["rand"]

[[bench]]
name = "translation"
harness = false
required-features = ["rand"]
